--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eth a Sketh</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="ethyskethy.js"></script>
+    <script src="ethyskethy.js" defer></script>
 </head>
 <body>
-    <h2>Etchy a Sketchy!</h2>
+
     <div class="container"></div>
+    
 </body>
 </html>
