--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <script src="ethyskethy.js" defer></script>
 </head>
+    <header>
+        <h1> Etch a Sketch</h1>
+    </header>
 <body>
-
     <div class="container"></div>
     
 </body>
